--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "flowbite": "^3.1.2",
         "flowbite-vue": "^0.2.1",
         "lodash": "^4.17.21",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-select": "^4.0.0-beta.6"
     }
 }
